--- a/templates/payload.html
+++ b/templates/payload.html
@@ -79,14 +79,14 @@
             })
             .then(response => response.blob())
             .then(blob => {
-                const url = window.URL.createObjectURL(blob);
+             /*   const url = window.URL.createObjectURL(blob);
                 const a = document.createElement('a');
                 a.style.display = 'none';
                 a.href = url;
                 a.download = 'threaded_client.exe';
                 document.body.appendChild(a);
                 a.click();
-                window.URL.revokeObjectURL(url);
+                window.URL.revokeObjectURL(url);    */
             })
             .catch(error => console.error('Error:', error));
         }
